# actions-flask

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  base.py  docker-compose.yml  extensions.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py
alembic/: env.py
alembic/versions/: 4508407ab77e_initial_migration.py
app/: __init__.py  models.py  routes.py
tests/: conftest.py  test_app.py  test_models.py
